--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
-                    <a class="nav-link" href="#">Experience <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="#">Education<span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Education</a>
+                    <a class="nav-link" href="#">Experience</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Projects</a>
