--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=B612&display=swap" rel="stylesheet">
+
 
 </head>
 
@@ -22,8 +24,8 @@
     <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
-    <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #319E7C;">
-        <a class="navbar-brand" href="#">Casey Jones</a>
+    <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #41CC89; color: #616161; ">
+        <a class="navbar-brand" href="#" style="color: #414141;">Casey Jones</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -46,18 +48,93 @@
         </div>
     </nav>
 
-    <div id="flexContainer">
-        <div id="flex_spacer_1"></div>
+    <div id="experienceContainer">
+        <div class="flex_spacer_1"></div>
         <div id="flex_my_face">
             <div id="my_face_visi">
                 <img src="images/my_face.jpg" alt=" " id="myFace">
             </div>
         </div>
-        <div id="flex_spacer_1"></div>
+        <div class="flex_spacer_1"></div>
         <div id="flex_my_name">
             <h3 id="my_name">Casey Jones</h3>
         </div>
+
+        <div id="flex_my_education">
+            <h6 id="my_education">Computer Science student at Brigham Young University</h6>
+        </div>
+
+        <div class="flex_spacer_1"></div>
+        <div class="flex_spacer_1"></div>
+
+
+        <div id="flex_my_experience">
+            <h3 id="experience">Experience</h3>
+        </div>
+
+        <div class="flex_spacer_1"></div>
+
+        <div id="experience_div">
+            <div id="experience_graph">
+                <div class="experience_item">
+                    <div id="html_item">HTML</div>
+                    <div id="html_filled"></div>
+                    <div id="html_unfilled"></div>
+                </div>
+                <div class="experience_item">
+                    <div id="css_item">CSS</div>
+                    <div id="css_filled"></div>
+                    <div id="css_unfilled"></div>
+                </div>
+                <div class="experience_item">
+                    <div id="javascript_item">JAVASCRIPT</div>
+                    <div id="javascript_filled"></div>
+                    <div id="javascript_unfilled"></div>
+                </div>
+                <div class="experience_item">
+                    <div id="python_item">PYTHON</div>
+                    <div id="python_filled"></div>
+                    <div id="python_unfilled"></div>
+                </div>
+                <div class="experience_item">
+                    <div id="java_item">JAVA</div>
+                    <div id="java_filled"></div>
+                    <div id="java_unfilled"></div>
+                </div>
+                <div class="experience_item">
+                    <div id="cpp_item">C++</div>
+                    <div id="cpp_filled"></div>
+                    <div id="cpp_unfilled"></div>
+                </div>
+                <div class="experience_item">
+                    <div id="r_item">R</div>
+                    <div id="r_filled"></div>
+                    <div id="r_unfilled"></div>
+                </div>
+                <div class="experience_item">
+                    <div id="linux_item">Linux</div>
+                    <div id="linux_filled"></div>
+                    <div id="linux_unfilled"></div>
+                </div>
+            </div>
+        </div>
+
+
     </div>
+
+    <div id="projectsContainer">
+        <div id="grey_background">
+            <h3 id="projects">Projects</h3>
+        </div>
+        <div id="projects_div">
+            <div id="projects_item">Item!</div>
+            <div id="projects_item">Item!</div>
+            <div id="projects_item">Item!</div>
+        </div>
+    </div>
+
+
+
 
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
