Added an image for hws. Started working on anchors

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                     <a class="nav-link" href="#">Experience</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Projects</a>
+                    <a class="nav-link" href="#projectsContainer">Projects</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Contact</a>
@@ -48,7 +48,7 @@
         </div>
     </nav>
 
-    <div id="experienceContainer">
+    <div id="flexContainer">
         <div class="flex_spacer_1"></div>
         <div id="flex_my_face">
             <div id="my_face_visi">
@@ -65,14 +65,12 @@
         </div>
 
         <div class="flex_spacer_1"></div>
-        <div class="flex_spacer_1"></div>
-
 
         <div id="flex_my_experience">
             <h3 id="experience">Experience</h3>
         </div>
 
-        <div class="flex_spacer_1"></div>
+        <div class="flex_spacer_2"></div>
 
         <div id="experience_div">
             <div id="experience_graph">
@@ -119,19 +117,21 @@
             </div>
         </div>
 
+        <div class="flex_spacer_1"></div>
 
+        <div id="projectsContainer">
+            <div id="grey_background">
+                <h3 id="projects">Projects</h3>
+            </div>
+            <div id="projects_div">
+                <img class="hws" id="projects_item" src="images/hws.png"></img>
+                <img class="savethecook" id="projects_item" src=""></div>
+            <img class="onceaday" id="projects_item"></div>
+    </div>
+    </div>
     </div>
 
-    <div id="projectsContainer">
-        <div id="grey_background">
-            <h3 id="projects">Projects</h3>
-        </div>
-        <div id="projects_div">
-            <div id="projects_item">Item!</div>
-            <div id="projects_item">Item!</div>
-            <div id="projects_item">Item!</div>
-        </div>
-    </div>
+
 
 
 
