Linux item now fills when reached on screen. Will add rest of bars later.

--- a/index.html
+++ b/index.html
@@ -111,8 +111,8 @@
                 </div>
                 <div class="experience_item">
                     <div id="linux_item">Linux</div>
-                    <div id="linux_filled"></div>
-                    <div id="linux_unfilled"></div>
+                    <div id="lin_fill" class="linux_filled"></div>
+                    <div id="lin_unfill" class="linux_unfilled"></div>
                 </div>
             </div>
         </div>
@@ -125,10 +125,10 @@
             </div>
             <div id="projects_div">
                 <img class="hws" id="projects_item" src="images/hws.png"></img>
-                <img class="savethecook" id="projects_item" src=""></div>
-            <img class="onceaday" id="projects_item"></div>
-    </div>
-    </div>
+                <img class="savethecook" id="projects_item" src=""></img>
+                <img class="onceaday" id="projects_item"></img>
+            </div>
+        </div>
     </div>
 
 
@@ -139,6 +139,7 @@
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+    <script src="script.js"></script>
 </body>
 
 </html>
