--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <div class="flex_spacer_1"></div>
         <div id="flex_my_face">
             <div id="my_face_visi">
-                <img src="images/my_face.jpg" alt=" " id="myFace">
+                <img src="images/my_face.png" alt=" " id="myFace">
             </div>
         </div>
         <div class="flex_spacer_1"></div>
