r is now also properly animated

--- a/index.html
+++ b/index.html
@@ -106,8 +106,8 @@
                 </div>
                 <div class="experience_item">
                     <div id="r_item">R</div>
-                    <div id="r_filled"></div>
-                    <div id="r_unfilled"></div>
+                    <div id="r_fill" class="r_filled"></div>
+                    <div id="r_unfill" class="r_unfilled"></div>
                 </div>
                 <div class="experience_item">
                     <div id="linux_item">Linux</div>
