Skills load after timer instead of scroll

--- a/index.html
+++ b/index.html
@@ -124,13 +124,25 @@
                 <h3 id="projects">Projects</h3>
             </div>
             <div id="projects_div">
-                <img class="hws" id="projects_item" src="images/hws.png"></img>
-                <img class="savethecook" id="projects_item" src=""></img>
-                <img class="onceaday" id="projects_item"></img>
+                <div id="projects_item">
+                    <a href="https://github.com/johncaseyjones1/Homework_Scheduler" target="_blank">
+                        <img class="hws" id="projects_pic" src="images/hws.png"></img>
+                        <h5>Homework Scheduler</h5>
+                    </a>
+                </div>
+                <div id="projects_item">
+                <a href="https://github.com/johncaseyjones1/savethecook" target="_blank">
+                    <img class="savethecook" id="projects_pic" src="images/savethecook.png"></img>
+                    <h5>Save the Cook</h5>
+                </a>
+                </div>
+                <div id="projects_item">
+                <img class="family_tree" id="projects_pic"></img>
+                </div>
             </div>
         </div>
     </div>
-
+;
 
 
 
