just tidying up the html

--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
         <li class="nav-item">
           <a class="nav-link" href="#projectsContainer">Projects</a>
         </li>
-        <li class="nav-item">
+        <!--<li class="nav-item">
           <a class="nav-link" href="#">Contact</a>
-        </li>
+        </li>-->
       </ul>
     </div>
   </nav>
@@ -140,6 +140,7 @@
             <h5>Save the Cook</h5>
           </a>
         </div>
+        <!--
         <div id="projects_item">
           <a href="https://github.com/johncaseyjones1/savethecook" target="_blank">
             <img class="family_tree" id="projects_pic"></img>
@@ -148,16 +149,20 @@
             <h5>Third thing</h5>
           </a>
         </div>
+        -->
       </div>
     </div>
 
     <div class="flex_spacer_1"></div>
-
+<!--
     <div id="contactContainer">
       <h3 id="contact">Contact</h3>
+
+      <h5>Email: <a href="mailto: jcaseyj.5@gmail.com"></a>jcaseyj.5@gmail.com</h5>
     </div>
+  -->
   </div>
-  ;
+
 
 
 
