Added Butterfly and Tweeter projects

--- a/index.html
+++ b/index.html
@@ -136,8 +136,24 @@
           <a href="https://github.com/johncaseyjones1/savethecook" target="_blank">
             <img class="savethecook" id="projects_pic" src="images/savethecook.png"></img>
           </a>
-          <a href="https://github.com/johncaseyjones1/Homework_Scheduler" target="_blank">
+          <a href="https://github.com/johncaseyjones1/savethecook" target="_blank">
             <h5>Save the Cook</h5>
+          </a>
+        </div>
+        <div id="projects_item">
+          <a href="https://github.com/johncaseyjones1/thanksgivingpoint-butterflies" target="_blank">
+            <img class="savethecook" id="projects_pic" src="images/butterfly.jfif"></img>
+          </a>
+          <a href="https://github.com/johncaseyjones1/thanksgivingpoint-butterflies" target="_blank">
+            <h5>Butterfly Portal</h5>
+          </a>
+        </div>
+        <div id="projects_item">
+          <a href="https://github.com/johncaseyjones1/Tweeter" target="_blank">
+            <img class="savethecook" id="projects_pic" src="images/tweeter.png"></img>
+          </a>
+          <a href="https://github.com/johncaseyjones1/Tweeter" target="_blank">
+            <h5>Tweeter with AWS</h5>
           </a>
         </div>
         <!--
