Fixed animation timing

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>Casey Jones</title>
+  <link rel="shortcut icon" type="image/jpg" href="images/icon.svg"/>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
